Updated left menu

--- a/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
+++ b/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
@@ -86,6 +86,7 @@
             ><span class="menu-title">Overview</span></a
           >
         </div>
+        <!-- Commenting for 1st release
         <div class="menu-item">
           <a
             class="menu-link without-sub"
@@ -126,8 +127,10 @@
             ><span class="menu-title">Connections</span></a
           >
         </div>
+        -->
       </div>
     </div>
+    <!-- Commenting for 1st release
     <div
       class="menu-item menu-accordion"
       routerLinkActive="here show"
@@ -165,10 +168,11 @@
         </div>
       </div>
     </div>
+    -->
   </div>
 </div>
 
-<!-- AutoProfile -->
+<!-- AutoProfile
 <div
   class="menu-item menu-accordion"
   data-kt-menu-trigger="click"
@@ -231,6 +235,7 @@
     </div>
   </div>
 </div>
+-->
 <!--
 
 //Accounts
