Updated logos, favicon, login

--- a/src/app/_metronic/layout/components/aside/aside.component.html
+++ b/src/app/_metronic/layout/components/aside/aside.component.html
@@ -2,11 +2,12 @@
 <div class="aside-logo flex-column-auto" id="kt_aside_logo">
   <!-- begin::Logo -->
   <ng-container *ngIf="asideTheme === 'dark'">
+    <!-- ./assets/media/logos/logo-1-dark.svg -->
     <a routerLink="/dashboard">
       <img
         alt="Logo"
-        class="h-25px logo"
-        src="./assets/media/logos/logo-1-dark.svg"
+        class="h-35px logo"
+        src="./assets/media/logos/SB_logo_transparent.png"
       />
     </a>
   </ng-container>
@@ -86,7 +87,7 @@
     data-bs-dismiss-="click"
     ngbDropdown="Check out the complete documentation with over 100 components"
   >
-    <span class="btn-label">Docs & Components</span>
+    <span class="btn-label">Terms & Conditions </span>
     <span
       [inlineSVG]="'./assets/media/icons/duotune/general/gen005.svg'"
       class="svg-icon btn-icon svg-icon-2"
