--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -6,12 +6,13 @@
     position-x-center
     bgi-no-repeat bgi-size-contain bgi-attachment-fixed
   "
-  style="background-image: url('./assets/media/illustrations/sketchy-1/14.png')"
+  style="background-image: url('./assets/media/illustrations/sketchy-1/15.png')"
 >
   <!--begin::Content-->
   <div class="d-flex flex-center flex-column flex-column-fluid p-10 pb-lg-20">
+    <!-- ./assets/media/logos/logo-1.svg -->
     <a routerLink="/" class="mb-12"
-      ><img alt="Logo" src="./assets/media/logos/logo-1.svg" class="h-45px"
+      ><img alt="Logo" src="./assets/media/logos/SB_logo.png" class="h-45px"
     /></a>
 
     <!--begin::Content body-->
@@ -25,11 +26,18 @@
   <!-- begin::Footer -->
   <div class="d-flex flex-center flex-column-auto p-10">
     <div class="d-flex align-items-center fw-bold fs-6">
-      <a class="text-muted text-hover-primary px-2 cursor-pointer">About</a
-      ><a class="text-muted text-hover-primary px-2 cursor-pointer">Contact</a
-      ><a class="text-muted text-hover-primary px-2 cursor-pointer"
-        >Contact Us</a
-      >
+      <a href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/terms"
+        target="_blank" class="text-muted text-hover-primary px-2 cursor-pointer">
+        Terms & Condtions
+      </a>
+      <a href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/contact_us"
+        target="_blank" class="text-muted text-hover-primary px-2 cursor-pointer">
+        Contact
+      </a>
+      <a href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/privacy"
+        target="_blank" class="text-muted text-hover-primary px-2 cursor-pointer">
+        Privacy
+      </a>
     </div>
   </div>
   <!-- end::Footer -->
