--- a/src/app/_metronic/layout/components/footer/footer.component.html
+++ b/src/app/_metronic/layout/components/footer/footer.component.html
@@ -10,20 +10,23 @@
   <!-- begin::Copyright  -->
   <div class="text-dark order-2 order-md-1">
     <span class="text-muted fw-bold me-2">{{ currentDateStr }} &copy;</span>
-    <a class="text-gray-800 text-hover-primary cursor-pointer"> Keenthemes </a>
+    <a class="text-gray-800 text-hover-primary cursor-pointer"> SOCIALBOND </a>
   </div>
   <!-- end::Copyright  -->
 
   <!-- begin::Nav  -->
   <ul class="menu menu-gray-600 menu-hover-primary fw-bold order-1">
     <li class="menu-item">
-      <a class="menu-link ps-0 pe-2 cursor-pointer"> About </a>
+      <a href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/refund"
+        target="_blank" class="menu-link ps-0 pe-2 cursor-pointer"> Cancellation & Refund </a>
     </li>
     <li class="menu-item">
-      <a class="menu-link pe-0 pe-2 cursor-pointer"> Contact </a>
+      <a href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/contact_us"
+        target="_blank" class="menu-link pe-0 pe-2 cursor-pointer"> Contact </a>
     </li>
     <li class="menu-item">
-      <a class="menu-link pe-0 cursor-pointer"> Purchase </a>
+      <a href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/privacy"
+        target="_blank" class="menu-link pe-0 cursor-pointer"> Privacy </a>
     </li>
   </ul>
   <!-- end::Nav  -->
