--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -8,7 +8,7 @@
 >
   <!--begin::Heading-->
   <div class="text-center mb-10">
-    <h1 class="text-dark mb-3">Sign In to Metronic</h1>
+    <h1 class="text-dark mb-3">Sign In to SOCIALBOND</h1>
     <div class="text-gray-400 fw-bold fs-4">
       New Here?
       <a
@@ -166,10 +166,14 @@
       </ng-container>
     </button>
 
+
     <!-- begin::Separator  -->
+    <!--
     <div class="text-center text-muted text-uppercase fw-bolder mb-5">or</div>
+    -->
     <!-- end::Separator  -->
 
+    <!--
     <a
       class="
         btn btn-flex
@@ -187,6 +191,7 @@
 
       Continue with Google
     </a>
+    -->
   </div>
   <!--end::Action-->
 </form>
