Added rzp payment module

--- a/src/app/_metronic/layout/components/header/header-menu/header-menu.component.html
+++ b/src/app/_metronic/layout/components/header/header-menu/header-menu.component.html
@@ -1,18 +1,24 @@
-<!-- Dashboard -->
+<marquee direction="left" style="margin-top: 18px;">
+  We are Testing and upgrading, website is in test mode please be patient with
+  us we want to get it right, If you have any concerns please express
+  them.<a href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/contact_us" class="alert-link">Contact us</a>
+</marquee>
+
+<!-- Dashboard --
 <div class="menu-item me-lg-1">
   <a class="menu-link py-3" routerLinkActive="active" routerLink="/dashboard"
   ><span class="menu-title" translate="MENU.DASHBOARD"></span
   ></a>
 </div>
 
-<!-- Layout Builder -->
+!-- Layout Builder --
 <div class="menu-item me-lg-1">
   <a class="menu-link py-3" routerLinkActive="active" routerLink="/builder"
   ><span class="menu-title">Layout Builder</span></a
   >
 </div>
 
-<!-- Crafted -->
+!-- Crafted --
 <div
   class="menu-item menu-lg-down-accordion me-lg-1 menu-dropdown"
   data-kt-menu-trigger="click"
@@ -359,7 +365,7 @@
     </div>
   </div>
 </div>
-<!-- Apps -->
+!-- Apps --
 <div
   class="menu-item menu-lg-down-accordion me-lg-1"
   data-kt-menu-trigger="click"
@@ -439,7 +445,7 @@
   </div>
 </div>
 
-<!-- MegaMenu -->
+!-- MegaMenu --
 <div
   class="menu-item menu-lg-down-accordion me-lg-1"
   data-kt-menu-trigger="click"
@@ -578,3 +584,4 @@
     </div>
   </div>
 </div>
+-->
