--- a/src/app/_metronic/layout/components/header/header.component.html
+++ b/src/app/_metronic/layout/components/header/header.component.html
@@ -29,8 +29,9 @@
 
   <!-- begin::Logo -->
   <div class="d-flex align-items-center flex-grow-1 flex-lg-grow-0">
+    <!-- ./assets/media/logos/logo-2.svg -->
     <a routerLink="/dashboard" class="d-lg-none">
-      <img src="./assets/media/logos/logo-2.svg" class="h-30px" />
+      <img src="./assets/media/logos/SB_icon_transparent.png" class="h-30px" />
     </a>
   </div>
   <!-- end::Logo -->
