--- a/src/app/_metronic/layout/components/topbar/topbar.component.html
+++ b/src/app/_metronic/layout/components/topbar/topbar.component.html
@@ -1,4 +1,4 @@
-<!-- Search toolbar -->
+<!-- Search toolbar --
 <div class="d-flex align-items-center" [ngClass]="toolbarButtonMarginClass">
   <div
     class="btn btn-icon btn-active-light-primary position-relative"
@@ -17,9 +17,9 @@
   <app-search-result-inner></app-search-result-inner>
 </div>
 
-<!-- Activities -->
+!-- Activities --
 <div class="d-flex align-items-center" [ngClass]="toolbarButtonMarginClass">
-  <!-- begin::Drawer toggle -->
+  !-- begin::Drawer toggle --
   <div
     class="btn btn-icon btn-active-light-primary"
     [ngClass]="toolbarButtonHeightClass"
@@ -31,10 +31,10 @@
       [ngClass]="toolbarButtonIconSizeClass"
     ></span>
   </div>
-  <!-- end::Drawer toggle -->
+  !-- end::Drawer toggle --
 </div>
 
-<!-- NOTIFICATIONS -->
+!-- NOTIFICATIONS --
 <div class="d-flex align-items-center" [ngClass]="toolbarButtonMarginClass">
   <div
     class="btn btn-icon btn-active-light-primary position-relative"
@@ -53,9 +53,9 @@
   <app-notifications-inner></app-notifications-inner>
 </div>
 
-<!-- CHAT -->
+!-- CHAT --
 <div class="d-flex align-items-center" [ngClass]="toolbarButtonMarginClass">
-  <!-- begin::Menu wrapper -->
+  !-- begin::Menu wrapper --
   <div
     class="btn btn-icon btn-active-light-primary position-relative"
     [ngClass]="toolbarButtonHeightClass"
@@ -80,10 +80,10 @@
       "
     ></span>
   </div>
-  <!-- end::Menu wrapper -->
+  !-- end::Menu wrapper --
 </div>
 
-<!-- Quick links -->
+!-- Quick links --
 <div class="d-flex align-items-center" [ngClass]="toolbarButtonMarginClass">
   <div
     class="btn btn-icon btn-active-light-primary"
@@ -101,6 +101,7 @@
   </div>
   <app-quick-links-inner></app-quick-links-inner>
 </div>
+-->
 
 <!-- begin::User -->
 <div
