--- a/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
+++ b/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
@@ -21,11 +21,13 @@
 
   <div class="separator my-2"></div>
 
+  <!-- Commenting for beta version release
   <div class="menu-item px-5">
     <a routerLink="/crafted/pages/profile" class="menu-link px-5">
       My Profile
     </a>
   </div>
+  -->
 
   <div class="menu-item px-5">
     <a class="menu-link px-5 cursor-pointer" placement="top-start" ngbTooltip="Coming soon">
@@ -148,13 +150,13 @@
       </div>
     </div>
   </div>
-
+  <!-- Commenting for beta version release
   <div class="menu-item px-5 my-1">
     <a routerLink="/crafted/account/settings" class="menu-link px-5">
       Account Settings
     </a>
   </div>
-
+  -->
   <div class="menu-item px-5">
     <a (click)="logout()" class="menu-link px-5 cursor-pointer"> Sign Out </a>
   </div>
