--- a/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
+++ b/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
@@ -458,3 +458,23 @@
   </a>
 </div>
 -->
+<div class="menu-item">
+  <div class="menu-content pt-8 pb-2">
+    <span class="menu-section text-muted text-uppercase fs-8 ls-1">Credits</span>
+  </div>
+</div>
+
+<div class="menu-item">
+  <a
+    class="menu-link without-sub"
+    routerLink="/payment"
+    routerLinkActive="active"
+    ><span class="menu-icon">
+      <span
+        [inlineSVG]="'./assets/media/icons/duotune/finance/fin002.svg'"
+        class="svg-icon svg-icon-2"
+      ></span>
+    </span>
+    <span class="menu-title">Buy Credits</span
+  ></a>
+</div>
