--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -105,8 +105,8 @@
                 <div class="symbol symbol-30px me-5 mb-8">
                   <span class="symbol-label">
                     <!--begin::Svg Icon | path: icons/duotune/general/gen020.svg-->
-                    <span [inlineSVG]="'/assets/media/icons/duotune/general/gen034.svg'"
-                      class="svg-icon svg-icon-1 svg-icon-danger"
+                    <span [inlineSVG]="'/assets/media/icons/duotune/general/gen040.svg'"
+                      class="svg-icon svg-icon-1 svg-icon-primary"
                     ></span>
                     <!--end::Svg Icon-->
                   </span>
@@ -137,8 +137,8 @@
                 <div class="symbol symbol-30px me-5 mb-8">
                   <span class="symbol-label">
                     <!--begin::Svg Icon | path: icons/duotune/general/gen013.svg-->
-                    <span [inlineSVG]="'/assets/media/icons/duotune/general/gen043.svg'"
-                      class="svg-icon svg-icon-1 svg-icon-success"
+                    <span [inlineSVG]="'/assets/media/icons/duotune/general/gen026.svg'"
+                      class="svg-icon svg-icon-1 svg-icon-primary"
                     ></span>
                     <!--end::Svg Icon-->
                   </span>
