--- a/src/app/pages/order/add-order/steps/step4/step4.component.html
+++ b/src/app/pages/order/add-order/steps/step4/step4.component.html
@@ -50,6 +50,7 @@
               </div>
             </div>
             <a class="btn btn-sm btn-active-light fw-bolder">
+              Current Balance:
               ${{ this.defaultValues.user_credits }}
             </a>
             <span
