--- a/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
+++ b/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
@@ -29,16 +29,16 @@
   >
 </div> -->
 <!-- Separator -->
-<div class="menu-item">
+<!-- <div class="menu-item">
   <div class="menu-content pt-8 pb-2">
     <span class="menu-section text-muted text-uppercase fs-8 ls-1"
       >Marketplace</span
     >
   </div>
-</div>
+</div> -->
 
 <!-- Order -->
-<div
+<!-- <div
   class="menu-item menu-accordion"
   data-kt-menu-trigger="click"
   routerLinkActive="here show"
@@ -85,7 +85,7 @@
               ><span class="bullet bullet-dot"></span></span
             ><span class="menu-title">Overview</span></a
           >
-        </div>
+        </div> -->
         <!-- Commenting for 1st release
         <div class="menu-item">
           <a
@@ -128,8 +128,8 @@
           >
         </div>
         -->
-      </div>
-    </div>
+      <!-- </div>
+    </div> -->
     <!-- Commenting for 1st release
     <div
       class="menu-item menu-accordion"
@@ -169,8 +169,8 @@
       </div>
     </div>
     -->
-  </div>
-</div>
+  <!-- </div>
+</div> -->
 
 <!-- AutoProfile
 <div
