--- a/src/app/_metronic/layout/components/aside/aside.component.html
+++ b/src/app/_metronic/layout/components/aside/aside.component.html
@@ -6,7 +6,7 @@
     <a routerLink="/dashboard">
       <img
         alt="Logo"
-        class="h-35px logo"
+        class="logo logo-sociobond"
         src="./assets/media/logos/SB_logo_transparent.png"
       />
     </a>
