--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -8,14 +8,14 @@
 >
   <!--begin::Heading-->
   <div class="text-center mb-10">
-    <h1 class="text-dark mb-3">Sign In to SOCIALBOND</h1>
+    <h1 class="text-dark mb-3">Sign In to SOCIOBOND</h1>
     <div class="text-gray-400 fw-bold fs-4">
       New Here?
       <a
         routerLink="/auth/registration"
         id="kt_login_signup"
         class="link-primary fw-bolder"
-        >{{ "AUTH.GENERAL.SIGNUP_BUTTON" | translate }}</a
+        >{{ 'AUTH.GENERAL.SIGNUP_BUTTON' | translate }}</a
       >
     </div>
   </div>
@@ -165,7 +165,6 @@
         <span class="indicator-label">Continue</span>
       </ng-container>
     </button>
-
 
     <!-- begin::Separator  -->
     <!--
