--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -1,20 +1,19 @@
 <div
-  class="
+  class="bg-dark
     d-flex
     flex-column flex-column-fluid
     bgi-position-y-bottom
     position-x-center
     bgi-no-repeat bgi-size-contain bgi-attachment-fixed
   "
-  style="background-image: url('./assets/media/illustrations/sketchy-1/15.png')"
+  style="background-image: url('./assets/media/illustrations/sketchy-1/14-dark.png')"
 >
   <!--begin::Content-->
   <div class="d-flex flex-center flex-column flex-column-fluid p-10 pb-lg-20">
     <!-- ./assets/media/logos/logo-1.svg -->
     <a routerLink="/" class="mb-12"
-      ><img alt="Logo" src="./assets/media/logos/SB_logo.png" class="h-45px"
+      ><img alt="Logo" src="./assets/media/logos/SB_logo.png" class="h-100px"
     /></a>
-
     <!--begin::Content body-->
     <div class="w-lg-500px bg-white rounded shadow-sm p-10 p-lg-15 mx-auto">
       <router-outlet></router-outlet>
