Fixed dashboard spelling mistake

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -20,7 +20,7 @@
               <span class="position-absolute opacity-50 bottom-0 start-0 border-2 border-white border-bottom w-100"></span>
               <!--end::Separator-->
             </span>
-            <span class="opacity-75"> to comlete</span>
+            <span class="opacity-75"> to complete</span>
           </div>
         </h3>
         <!--end::Title-->
