Order history date issues fixed

--- a/src/app/pages/payment/payment.component.html
+++ b/src/app/pages/payment/payment.component.html
@@ -87,11 +87,13 @@
                     <button type="reset" data-kt-ecommerce-settings-type="cancel" class="btn btn-light me-3">Cancel</button>
                     <!--end::Button-->
                     <!--begin::Button-->
-                    <button type="submit" class="btn btn-info" id="submitBtn">
+                    <!-- <button type="submit" class="btn btn-info" id="submitBtn">
                       <span class="indicator-label">Buy</span>
                       <span class="indicator-progress">Please wait...
                       <span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
-                    </button>
+                    </button> -->
+
+                    <div> <a style=" width: 135px; background-color: #6BB0C6; text-align: center; font-weight: 800; padding: 11px 0px; color: white; font-size: 12px; display: inline-block; text-decoration: none; " href='https://pmny.in/IIejUcBxUQF8' > Pay Now </a> </div>
                     <!--end::Button-->
                   </div>
                 </div>
