Removed unused btn - create, filter, signup with gmail

--- a/src/app/_metronic/layout/components/toolbar/toolbar.component.html
+++ b/src/app/_metronic/layout/components/toolbar/toolbar.component.html
@@ -9,10 +9,8 @@
     [ngClass]="pageTitleCssClasses"
   ></app-page-title>
   <!-- begin::Actions  -->
-  <div class="d-flex align-items-center py-1">
-    <!-- begin::Wrapper  -->
+  <!-- <div class="d-flex align-items-center py-1">
     <div class="me-4">
-      <!-- begin::Menu  -->
       <a
         class="
           btn btn-sm btn-flex btn-light btn-active-primary
@@ -30,11 +28,8 @@
         Filter
       </a>
 
-      <!-- end::Menu  -->
     </div>
-    <!-- end::Wrapper  -->
 
-    <!-- begin::Button  -->
     <a
       class="btn btn-sm btn-primary cursor-pointer"
       data-bs-toggle="modal"
@@ -43,7 +38,6 @@
     >
       Create
     </a>
-    <!-- end::Button  -->
-  </div>
+  </div> -->
   <!-- end::Actions  -->
 </div>
