forgot password api call --added

--- a/src/app/modules/auth/components/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/components/forgot-password/forgot-password.component.html
@@ -31,9 +31,27 @@
       <!--end::Body-->
     </div>
   </ng-container>
+  <div *ngIf="errorState === errorStates.NoError" class="card card-custom bgi-no-repeat gutter-b" style="height: 175px; background-color: #4ab58e; background-position: calc(100% + 1rem) bottom; background-size: 25% auto; background-image: url(assets/media/svg/humans/custom-1.svg);">
+    <div class="card-body d-flex align-items-center">
+      <div class="py-2">
+        <h3 class="text-white font-weight-bolder mb-3">
+          Email is registered!
+        </h3>
+        <p class="text-white font-size-lg">
+          Message with 'recovery' instruction has
+          <br> been sent. Please check your email.
+          <br>
+        </p>
+        <a routerLink="/auth/login"
+          class="swal2-confirm btn font-weight-bold btn-light-primary">
+          Ok, got it!
+        </a>
+      </div>
+    </div>
+  </div>
 
   <!--begin::Form group-->
-  <div class="fv-row mb-10">
+  <div class="fv-row mb-10" *ngIf="errorState !== errorStates.NoError">
     <label class="form-label fw-bolder text-gray-900 fs-6">Email</label>
     <input
       class="form-control form-control-lg form-control-solid"
@@ -83,7 +101,9 @@
   </div>
   <!--end::Form group-->
   <!--begin::Form group-->
-  <div class="d-flex flex-wrap justify-content-center pb-lg-0">
+  -------- {{ errorStates.NotSubmitted }} ---- {{ errorStates.HasError }} --- {{ isLoading$ }}
+  <div *ngIf="errorState !== errorStates.NoError"
+    class="d-flex flex-wrap justify-content-center pb-lg-0">
     <button
       type="submit"
       id="kt_password_reset_submit"
