--- a/src/app/pages/payment/payment.component.html
+++ b/src/app/pages/payment/payment.component.html
@@ -93,7 +93,7 @@
                       <span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
                     </button> -->
 
-                    <div> <a style=" width: 135px; background-color: #6BB0C6; text-align: center; font-weight: 800; padding: 11px 0px; color: white; font-size: 12px; display: inline-block; text-decoration: none; " href='https://pmny.in/IIejUcBxUQF8' > Pay Now </a> </div>
+                    <div> <a style=" width: 135px; background-color: #1065B7; text-align: center; font-weight: 800; padding: 11px 0px; color: white; font-size: 12px; display: inline-block; text-decoration: none; " href='https://pmny.in/IIejUcBxUQF8' > Pay Now </a> </div>
                     <!--end::Button-->
                   </div>
                 </div>
