--- a/src/app/modules/auth/components/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/components/forgot-password/forgot-password.component.html
@@ -27,7 +27,7 @@
   <ng-container *ngIf="errorState === errorStates.NoError">
     <div class="mb-10 bg-light-info p-8 rounded">
       <!--begin::Body-->
-      <div class="text-info">Sent password reset. Please check your email</div>
+      <div class="text-info">Sent password reset mail. Please check your email</div>
       <!--end::Body-->
     </div>
   </ng-container>
@@ -35,7 +35,7 @@
     <div class="card-body d-flex align-items-center">
       <div class="py-2">
         <h3 class="text-white font-weight-bolder mb-3">
-          Email is registered!
+          Email is correct!
         </h3>
         <p class="text-white font-size-lg">
           Message with 'recovery' instruction has
@@ -101,7 +101,6 @@
   </div>
   <!--end::Form group-->
   <!--begin::Form group-->
-  -------- {{ errorStates.NotSubmitted }} ---- {{ errorStates.HasError }} --- {{ isLoading$ }}
   <div *ngIf="errorState !== errorStates.NoError"
     class="d-flex flex-wrap justify-content-center pb-lg-0">
     <button
