--- a/src/app/pages/order/add-order/steps/step1/step1.component.html
+++ b/src/app/pages/order/add-order/steps/step1/step1.component.html
@@ -3,15 +3,15 @@
     Select Category
     <i
       class="fas fa-exclamation-circle ms-2 fs-7"
-      ngbTooltip="Billing is issued based on your selected account type"
+      ngbTooltip="Select below listed service category and click continue"
     ></i>
   </h2>
 
-  <div class="text-gray-400 fw-bold fs-6">
+  <!-- <div class="text-gray-400 fw-bold fs-6">
     If you need more info, please check out
     <a href="#" class="link-primary fw-bolder"> Help Page </a>
     .
-  </div>
+  </div> -->
 </div>
 
 <div class="fv-row" [formGroup]="form">
