--- a/src/app/_metronic/layout/components/topbar/topbar.component.html
+++ b/src/app/_metronic/layout/components/topbar/topbar.component.html
@@ -1,3 +1,33 @@
+<!-- Activities -->
+<div class="d-flex align-items-center" [ngClass]="toolbarButtonMarginClass" class="creditsBtn">
+  <!-- begin::Drawer toggle -->
+  <div
+    class="btn btn-active-light-primary position-relative"
+    [ngClass]="toolbarButtonHeightClass"
+  >
+    <span
+      [inlineSVG]="'./assets/media/icons/duotune/finance/fin008.svg'"
+      class="svg-icon"
+      [ngClass]="toolbarButtonIconSizeClass"
+    ></span>
+    <span
+      class="
+        bullet bullet-dot
+        bg-success
+        h-6px
+        w-6px
+        position-absolute
+        translate-middle
+        top-0
+        start-50
+        animation-blink
+      "
+    ></span>
+    Credits: 123
+  </div>
+  <!-- end::Drawer toggle -->
+</div>
+
 <!-- Search toolbar --
 <div class="d-flex align-items-center" [ngClass]="toolbarButtonMarginClass">
   <div
@@ -118,8 +148,8 @@
     data-kt-menu-placement="bottom-end"
     data-kt-menu-flip="bottom"
   >
-  <img *ngIf="user$ | async as _user" [src]="_user.avatar" alt="metronic" />
-  <img *ngIf="!(user$ | async)" src="./assets/media/avatars/blank.png" alt="metronic" />
+  <img *ngIf="user$ | async as _user" [src]="_user.avatar" alt="profile" />
+  <img *ngIf="!(user$ | async)" src="./assets/media/avatars/blank.png" alt="profile" />
   </div>
   <!-- end::Toggle  -->
   <app-user-inner></app-user-inner>
