Updated prod API URL

--- a/src/app/_metronic/layout/components/footer/footer.component.html
+++ b/src/app/_metronic/layout/components/footer/footer.component.html
@@ -6,6 +6,7 @@
   <div class="text-dark order-2 order-md-1">
     <span class="text-muted fw-bold me-2">{{ currentDateStr }} &copy;</span>
     <a class="text-gray-800 text-hover-primary cursor-pointer"> SOCIOBOND </a>
+    <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=BHri3syIHSaHxU9pu0211LWITHoMwTzcqXxCZlt82xar03gDWSH2OA0VEpsF"></script></span>
   </div>
   <!-- end::Copyright  -->
 
