fixed post details service

--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -22,14 +22,14 @@
   <!--end::Heading-->
 
   <!-- begin::Alert info-->
-  <ng-container *ngIf="!hasError">
+  <!-- <ng-container *ngIf="!hasError">
     <div class="mb-10 bg-light-info p-8 rounded">
       <div class="text-info">
         Use account <strong>{{ defaultAuth.email }}</strong> and password
         <strong>{{ defaultAuth.password }}</strong> to continue.
       </div>
     </div>
-  </ng-container>
+  </ng-container> -->
   <!-- end::Alert info-->
 
   <!-- begin::Alert error-->
