Added action buttons for order history page

--- a/src/app/_metronic/layout/components/topbar/topbar.component.html
+++ b/src/app/_metronic/layout/components/topbar/topbar.component.html
@@ -1,6 +1,6 @@
-<!-- Activities -->
+<!-- Activities --
 <div class="d-flex align-items-center" [ngClass]="toolbarButtonMarginClass" class="creditsBtn">
-  <!-- begin::Drawer toggle -->
+  !-- begin::Drawer toggle --
   <div
     class="btn btn-active-light-primary position-relative"
     [ngClass]="toolbarButtonHeightClass"
@@ -25,8 +25,9 @@
     ></span>
     Credits: 123
   </div>
-  <!-- end::Drawer toggle -->
+  !-- end::Drawer toggle --
 </div>
+-->
 
 <!-- Search toolbar --
 <div class="d-flex align-items-center" [ngClass]="toolbarButtonMarginClass">
