--- a/src/app/pages/order/add-order/steps/step3/step3.component.html
+++ b/src/app/pages/order/add-order/steps/step3/step3.component.html
@@ -1,9 +1,9 @@
 <div class="pb-10 pb-lg-12">
-  <h2 class="fw-bolder text-dark">Business Details</h2>
-  <div class="text-gray-400 fw-bold fs-6">
+  <h2 class="fw-bolder text-dark">Drip Feed</h2>
+  <!-- <div class="text-gray-400 fw-bold fs-6">
     If you need more info, please check out
     <a href="#" class="link-primary fw-bolder">Help Page</a>.
-  </div>
+  </div> -->
 </div>
 <div [formGroup]="form">
   <div class="d-flex flex-stack mb-8">
