--- a/src/app/pages/order/order-history/order-history.component.html
+++ b/src/app/pages/order/order-history/order-history.component.html
@@ -66,6 +66,7 @@
         [rowSelection]="rowSelection"
         [rowData]="rowData"
         [enableCellChangeFlash]="true"
+        [getRowStyle]="getRowStyle"
         (gridReady)="onGridReady($event)"
     ></ag-grid-angular>
   </div>
