--- a/src/app/modules/errors/errors.component.html
+++ b/src/app/modules/errors/errors.component.html
@@ -14,8 +14,8 @@
     <a (click)="routeToDashboard()" class="mb-10 pt-lg-20 cursor-pointer">
       <img
         alt="Logo"
-        src="./assets/media/logos/logo-1.svg"
-        class="h-50px mb-5"
+        src="./assets/media/logos/SB_logo.png"
+        class="h-100px mb-5"
       />
     </a>
     <div class="pt-lg-10">
@@ -35,22 +35,22 @@
   <div class="d-flex flex-center flex-column-auto p-10">
     <div class="d-flex align-items-center fw-bold fs-6">
       <a
-        href="https://keenthemes.com"
+        href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/terms"
         class="text-muted text-hover-primary px-2"
       >
-        About
+        Terms & Conditions
       </a>
       <a
-        href="mailto:support@keenthemes.com"
+        href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/contact_us"
         class="text-muted text-hover-primary px-2"
       >
         Contact
       </a>
       <a
-        href="https://1.envato.market/EA4JP"
+        href="https://merchant.razorpay.com/policy/KnW0ctDvdahphe/privacy"
         class="text-muted text-hover-primary px-2"
       >
-        Contact Us
+        Privacy
       </a>
     </div>
   </div>
