--- a/src/app/pages/order/add-order/steps/step2/step2.component.html
+++ b/src/app/pages/order/add-order/steps/step2/step2.component.html
@@ -66,9 +66,9 @@
         >
       </div>
     </div>
-    <div class="form-text">
+    <!-- <div class="form-text">
       Customers will see this shortened version of your statement descriptor
-    </div>
+    </div> -->
   </div>
 
   <div class="mb-0 fv-row">
