--- a/src/app/pages/order/add-order/steps/step5/step5.component.html
+++ b/src/app/pages/order/add-order/steps/step5/step5.component.html
@@ -1,9 +1,9 @@
 <div class="pb-8 pb-lg-10">
   <h2 class="fw-bolder text-dark">Your Are Done!</h2>
-  <div class="text-gray-400 fw-bold fs-6">
+  <!-- <div class="text-gray-400 fw-bold fs-6">
     If you need more info, please
     <a class="link-primary fw-bolder cursor-pointer"> Sign In</a>.
-  </div>
+  </div> -->
 </div>
 <div class="mb-0">
   <div class="fs-6 text-gray-600 mb-5">
