--- a/src/app/_metronic/layout/components/topbar/topbar.component.html
+++ b/src/app/_metronic/layout/components/topbar/topbar.component.html
@@ -1,3 +1,36 @@
+<!-- Credits -->
+<div class="d-flex align-items-center" [ngClass]="toolbarButtonMarginClass"
+  style="width: 200px;" *ngIf="user$ | async as _user">
+  <a
+    class="btn btn-active-light-primary position-relative"
+    [ngClass]=""
+    routerLinkActive="active" routerLink="/payment"
+  >
+    <span
+      [inlineSVG]="'./assets/media/icons/duotune/finance/fin008.svg'"
+      class="svg-icon"
+      [ngClass]="toolbarButtonIconSizeClass"
+    ></span>
+    <span
+      class="
+        bullet bullet-dot
+        bg-success
+        h-6px
+        w-6px
+        position-absolute
+        translate-middle
+        top-0
+        start-50
+        animation-blink
+      "
+    ></span>
+    <span style="margin-top: 5px;">
+      Credits: ${{ _user.credits }}
+    </span>
+  </a>
+  <app-search-result-inner></app-search-result-inner>
+</div>
+
 <!-- Activities --
 <div class="d-flex align-items-center" [ngClass]="toolbarButtonMarginClass" class="creditsBtn">
   !-- begin::Drawer toggle --
